# Autobattler-combat-simulator-inspired-by-TFT

./: AttacksAbilitiesDeathHandling.cpp  AttacksAbilitiesDeathHandling.h  CMakeLists.txt  Champ.cpp  Champ.h  ChampionPool.h  Combat.cpp  Combat.h  Draw.cpp  Draw.h  EnemyFinding.cpp  EnemyFinding.h  Grid.cpp  Grid.h  Log.cpp  Log.h  Main.cpp  README.md  Team.cpp  Team.h  TraitStatSystem.h  Traits.cpp
data/: ChampionPool.json  Traits.json
include/: AttacksAbilitiesDeathHandling.h  Champ.h  Combat.h  Draw.h  EnemyFinding.h  Grid.h  Items.h  Log.h  Team.h  TraitStatSystem.h  Traits.h  TraitsActivation.h
